--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cached_network_image: ^2.0.0
   intl: ^0.16.1
+  cloud_firestore: ^0.13.5
 
 dev_dependencies:
   flutter_test:
