--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cached_network_image: ^2.0.0
   intl: ^0.16.1
   cloud_firestore: ^0.13.5
+  firebase_storage: ^3.0.8
+  image_picker: ^0.6.2+2
 
 dev_dependencies:
   flutter_test:
