--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_storage: ^3.0.8
   image_picker: ^0.6.2+2
+  cache_image: "^1.0.5"
 
 dev_dependencies:
   flutter_test:
