--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   firebase_storage: ^3.0.8
   image_picker: ^0.6.2+2
   cache_image: "^1.0.5"
+  firebase_auth: ^0.14.0+5
+  provider: ^3.1.0+1
+  shared_preferences: ^0.5.3+4
+  logger: ^0.7.0+2
 
 dev_dependencies:
   flutter_test:
