--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^3.1.0+1
   shared_preferences: ^0.5.3+4
   logger: ^0.7.0+2
+  transparent_image : any
 
 dev_dependencies:
   flutter_test:
