--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^0.5.3+4
   logger: ^0.7.0+2
   transparent_image : any
+  fluttertoast: ^4.0.0
+  photo_view: any
 
 
 dev_dependencies:
@@ -58,6 +60,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/emoticon/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
